# ScoreMD

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  INFERENCE.md  LICENSE  README.md  TRAIN.md  evaluate.py  pyproject.toml  stores.py  train.py
config/architecture/mlp/: large_potential.yaml  large_potential_potential_potential.yaml  large_score.yaml  large_score_score_potential.yaml  large_score_score_score.yaml  small_mixture_fair.yaml  small_potential.yaml  small_potential_potential_potential.yaml  small_score.yaml  small_score_mueller.yaml  small_score_potential_potential.yaml  small_score_score_potential.yaml  small_score_score_score.yaml
config/architecture/transformer/: large_potential.yaml  large_score.yaml  large_score_large_score_large_potential.yaml  potential.yaml  potential_like_three.yaml  potential_potential_large_potential.yaml  potential_potential_potential.yaml  score.yaml  score_score_large_potential.yaml  score_score_potential.yaml  very_large_potential.yaml  very_large_potential_wide.yaml
config/model/: mlp_potential.yaml  mlp_score.yaml  mlp_small_potential.yaml  mlp_small_score.yaml  transformer_large_potential.yaml  transformer_large_score.yaml  transformer_potential.yaml  transformer_potential_like_three.yaml  transformer_score.yaml  transformer_very_large_potential.yaml  transformer_very_large_potential_wide.yaml
evaluation/: README.md  evaluate_aldp.py  evaluate_aldp_tables.py  evaluate_minipeptide.py  evaluate_protein.py  evaluate_protein_dynamics.ipynb
src/ffdiffusion/: rmsd.py  simulation.py
src/ffdiffusion/data/: preprocess.py
src/ffdiffusion/diffusion/: fp.py
src/ffdiffusion/evaluate/: molecules.py  utils.py
src/scoremd/: loss.py  simulation.py
storage/deshaw/: chignolin_tica.pic
(+54 files in other folders)
