[project]
description = "Learn the potential with diffusion"
name = "ffdiffusion"
requires-python = "== 3.11.*"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
ffdiffusion = { path = ".", editable = true }
bgmol = { git = "https://github.com/noegroup/bgmol.git" }
bgflow = { git = "https://github.com/noegroup/bgflow.git" }
jax = "==0.5.2"
flax = "==0.10.4"
orbax-checkpoint = "==0.11.6"
wandb = ">=0.19.5,<0.20"

hydra-colorlog = ">=1.2.0,<2"
hydra-zen = ">=0.13.0,<0.14"

[tool.pixi.dependencies]
# dev dependencies (optional)
pixi-pycharm = ">=0.0.8"
pytest = ">=8.3.4,<9"
jupyterlab = ">=4.3.0,<5"
pytorch = ">=2.4.1,<3"

numpy = ">=1.26.4,<2"
matplotlib = "==3.9.4"
tqdm = ">=4.67.0,<5"
scikit-learn = ">=1.5.2,<2"
openmm = ">=8.2.0,<9"
mdtraj = "==1.9.9"
deeptime = ">=0.4.4,<0.5"
python-dotenv = ">=1.0.1,<2"
einops = ">=0.8.0,<0.9"
nglview = ">=3.1.4,<4"
pandas = ">=2.2.2,<3"

[tool.pixi.target.linux-64.pypi-dependencies]
jax = { version = "==0.5.2", extras = ["cuda12"] }

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.9.7,<0.10"
pre-commit = ">=4.1.0,<5"
pre-commit-hooks = ">=5.0.0,<6"

[tool.pixi.feature.lint.tasks]
format = "ruff format"
pre-commit-install = "pre-commit install --install-hooks"
pre-commit-run = "pre-commit run --all-files"

[tool.pixi.tasks]
train = "python train.py"
test = "python -m pytest"

[tool.pixi.environments]
lint = ["lint"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]
